--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -68,17 +68,16 @@ pl:
         new:
           rodo_agreements: |-
             Zapoznałem/am się z zasadami przetwarzania moich danych osobowych.<br>
-            <small>Wyrażam zgodę na przetwarzanie moich danych osobowych przez Laboratorium Innowacji Społecznych w celu realizacji Budżetu Obywatelskiego 2020 w Gdyni w zakresie imienia
-            i nazwiska, nazwy konta oraz adresu e-mail, na podstawie art. 6 ust. 1 lit. a) Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 roku
-            w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia Dyrektywy 95/46/WE (Ogólne
-            Rozporządzenie o Ochronie Danych) z dnia 27 kwietnia 2016 roku, (Dz.Urz.UE.L Nr 119, strona 1) wyrażam zgodę na przetwarzanie moich danych osobowych przez
-            Laboratorium Innowacji Społecznych w celu realizacji Budżetu Obywatelskiego 2020 w Gdyni w zakresie imienia i nazwiska, nazwy konta oraz adresu e-mail.<br>
+            <small>Wyrażam zgodę na przetwarzanie moich danych osobowych przez Laboratorium Innowacji Społecznych w celu założenia konta na Gdyńskiej Platformie Dialogu oraz korzystania
+            z jej funkcjonalności w zakresie adresu e-mail, nazwy konta, nazwy użytkownika oraz numeru karty mieszkańca, na podstawie art. 6 ust. 1 lit. a) Rozporządzenia Parlamentu Europejskiego
+            i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 roku w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz
+            uchylenia Dyrektywy 95/46/WE (Ogólne Rozporządzenie o Ochronie Danych) z dnia 27 kwietnia 2016 roku, (Dz.Urz.UE.L Nr 119, strona 1).<br>
             Więcej na temat przetwarzania Twoich danych osobowych znajdziesz %{link}.</small>
           rodo_link: tutaj
           show_inhabitant: Zarejestruj się kartą mieszkańca
           show_default: Zarejestruj się klasycznie
-          card_number_help: Podaj numer karty mieszkańca zarejestrowany na email który podałeś wyzej
-          email_help: Zakłądajać koonto z kartą mieszkańca, podaj email, na który jest ona zarejestrowana.
+          card_number_help: Podaj numer Karty Mieszkańca <b>zarejestrowany na email, który podałeś wyżej</b>.
+          email_help: <b>Zakładając konto z Kartą Mieszkańca</b>, podaj email, na który jest ona zarejestrowana.
     group:
       delete:
         alert: Nie można cofnąć tej czynności.
